--- a/.github/workflows/fargatepush.yml
+++ b/.github/workflows/fargatepush.yml
@@ -50,3 +50,17 @@ jobs:
           service: nodejs-app-service
           cluster: DevCluster
           wait-for-service-stability: true    
+      - name: Executing remote ssh commands using ssh key
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo apt-get -y update
+            sudo apt-get install -y apache2
+            sudo systemctl start apache2
+            sudo systemctl enable apache2
+            mkdir /var/www/html/images
+            cd home
+            sudo mv * /var/www/html
